<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">ECML</string>
    <string name="choose_song">Choose Song</string>
    <string name="song_settings_str">Settings</string>
    <string name="save_images_str">Save As Images</string>
    <string name="save_images_descr_str">Save the sheet music as images, in the directory /ECML/MusicSheets, with the following filename</string>
    <string name="help_str">Help</string>
    <string name="sheet_prefs_title">Sheet Music Preferences</string>
    <string name="restore_defaults">Restore Default Settings</string>
    <string name="select_tracks_to_display">Select Tracks to Display</string>
    <string name="select_tracks_to_mute">Select Tracks to Mute</string>
    <string name="select_instruments_per_track">Select Instruments For Each Track</string>
    <string name="set_all_tracks">Display and Unmute All Tracks</string>
    <string name="set_all_to_piano">Set All Instruments to Piano</string>
    <string name="scroll_vertically">Scroll Vertically</string>
    <string name="show_piano">Show the Piano</string>
    <string name="show_lyrics">Show Lyrics</string>
    <string name="choose_delay">Choose delay</string>
    <string name="show_note_letters">Show Note Letters</string>
    <string name="combine_to_two_staffs">Combine To Two Staffs</string>
    <string name="combine_to_two_staffs_summary">Combine all the tracks into two staffs (left hand and right hand staffs). </string>
    <string name="split_to_two_staffs">Split Track Into Two Staffs</string>
    <string name="split_to_two_staffs_summary">Split the single track into two staffs (left hand and right hand staffs).</string>
    <string name="transpose">Transpose Notes</string>
    <string name="key_signature">Key Signature</string>
    <string name="time_signature">Time Signature</string>
    <string name="combine_interval">Combine Interval</string>
    <string name="combine_interval_summary">Notes within the given interval (in milliseconds) are combined into a single chord</string>
    <string name="right_hand_color">Right Hand Color</string>
    <string name="left_hand_color">Left Hand Color</string>
    <string name="show_measures">Show Measure Numbers</string>
    <string name="play_measures_in_loop_title">Settings for Play Measures in a Loop</string>
    <string name="play_measures_in_loop">Play Measures in a Loop</string>
    <string name="play_measures_in_loop_start">Start Measure</string>
    <string name="play_measures_in_loop_end">End Measure</string>
    <string name="scan_button_title">Scan SD Card for MIDI files</string>
    <string name="scan_files_str">Scan for MIDI Files</string>
    <string name="browse_files_str">Browse for MIDI Files</string>
    <string name="youtube_str">Go on Youtube</string>
    <string name="upload_youtube">Upload a video on Youtube</string>
    <string name="calendar_str">Calendar</string>
    <string name="game_str">Play game</string>
    <string name="stop_recording_str">Stop recording</string>
    <string name="start_recording_str">Start recording</string>
    <string name="choose_title_str">Choose the title</string>
    <string name="audio_format_str">Audio Format</string>
    <string name="play_last_str">Play last record</string>
    <string name="pausereplay">Pause replay</string>
    <string name="audio">Audio Recording</string>
    <string name="video">Video Recording</string>
    <string name="switchcamera">Switch camera</string>
    <string name="messenger">ECML Messenger</string>
    <string name="score">Show scores</string>
    <string name="youtube">Youtube</string>
    <string name="metronome">Metronome</string>
    <string name="tuning">Tuning fork</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="hello_world">Hello world!</string>
    <string name="clickme">Click me</string>
    <string name="recordscore">Record with scores</string>
    <string name="startmetronome">Start metronome</string>
    <string name="stopmetronome">Stop metronome</string>
    <string name="howtoplay">How to play the game</string>
    <string name="help_reading">Hear the notes and then find them. The goal is to find the maximum of right notes.</string>
    <string android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/help_speed" name="help_speed">Play the notes with the good rythm.</string>
    <string name="database">Database</string>
    <string name="hello">Hello</string>
    

</resources>
