<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/video"
        android:icon="@drawable/video"
        android:showAsAction="always"
        android:title="@string/video">
        <menu>
            <item
                android:id="@+id/startVideoRecording"
                android:icon="@drawable/record"
                android:showAsAction="always"
                android:title="@string/start_recording_str">
            </item>
            <item
                android:id="@+id/stopVideoRecording"
                android:icon="@drawable/stop"
                android:showAsAction="always"
                android:title="@string/stop_recording_str">
             </item>
             <item
                android:id="@+id/replayVideoRecording"
                android:icon="@drawable/play"
                android:showAsAction="always"
                android:title="@string/play_last_str">
            </item>
            <item
                android:id="@+id/switchCamera"
                android:icon="@drawable/switchcamera"
                android:showAsAction="always"
                android:title="@string/switchcamera">
            </item>            
        </menu>
    </item>
    <item
        android:id="@+id/audio"
        android:icon="@drawable/audio"
        android:showAsAction="always"
        android:title="@string/audio">
        <menu>
            <item
                android:id="@+id/startAudioRecording"
                android:icon="@drawable/record"
                android:showAsAction="always"
                android:title="@string/start_recording_str">
            </item>
            <item
                android:id="@+id/stopAudioRecording"
                android:icon="@drawable/stop"
                android:showAsAction="always"
                android:title="@string/stop_recording_str">
             </item>
             <item
                android:id="@+id/replayAudioRecording"
                android:icon="@drawable/play"
                android:showAsAction="always"
                android:title="@string/play_last_str">
            </item>
            <item
                android:id="@+id/pauseReplayAudioRecording"
                android:icon="@drawable/pause"
                android:showAsAction="always"
                android:title="@string/pausereplay">
            </item>            
        </menu>
    </item>
    <item
        android:id="@+id/youtube"
        android:icon="@drawable/youtube"
        android:showAsAction="always"
        android:title="@string/youtube_str">
    </item>
    <item
        android:id="@+id/metronome"
        android:actionLayout="@layout/abmetronome"
        android:icon="@drawable/metronome"
        android:showAsAction="always|collapseActionView"
        android:title="Metronome">
    </item>
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:showAsAction="always"
        android:title="Settings">
        <menu>
            <item
                android:id="@+id/song_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/song_settings_str"/>
            <item
                android:id="@+id/save_images"
                android:icon="@android:drawable/ic_menu_save"
                android:title="@string/save_images_str"/>
            <item
                android:id="@+id/help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help_str"/>
        </menu>
    </item>

</menu>